# sqr-project

./: .coverage  .env  .gitignore  README.md  app.py  bandit.yaml  finance.db  main.py  pyproject.toml  pytest.ini
.github/workflows/: python.yml
frontend/: index.html
tests/: conftest.py  test_app.py  test_finance_app.py
